Import of JETTERO/GD-Graph-ohlc-0.9601 from CPAN.
gitpan-cpan-distribution: GD-Graph-ohlc
gitpan-cpan-version:      0.9601
gitpan-cpan-path:         JETTERO/GD-Graph-ohlc-0.9601.tar.gz
gitpan-cpan-author:       JETTERO
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -1,9 +1,9 @@
 --- #YAML:1.0
 name:               GD-Graph-ohlc
-version:            0.9600
+version:            0.9601
 abstract:           ~
 author:  []
-license:            lgpl2
+license:            LGPL
 distribution_type:  module
 configure_requires:
     ExtUtils::MakeMaker:  0
@@ -11,14 +11,14 @@ build_requires:
     ExtUtils::MakeMaker:  0
 requires:
     GD::Graph:  0
-    perl:       5.008
+    perl:       5.006001
 resources:
-    repository:  http://github.com/jettero/gd--graph--ohlc/tree
+    repository:  http://github.com/jettero/gd--graph--ohlc/
 no_index:
     directory:
         - t
         - inc
-generated_by:       ExtUtils::MakeMaker version 6.50
+generated_by:       ExtUtils::MakeMaker version 6.52
 meta-spec:
     url:      http://module-build.sourceforge.net/META-spec-v1.4.html
     version:  1.4
