--- a/META.yml
+++ b/META.yml
@@ -1,28 +1,29 @@
---- #YAML:1.0
-name:               GD-Graph-ohlc
-version:            0.9605
-abstract:           ~
-author:  []
-license:            LGPL
-distribution_type:  module
-configure_requires:
-    ExtUtils::MakeMaker:  0
+---
+abstract: unknown
+author:
+  - unknown
 build_requires:
-    ExtUtils::MakeMaker:  0
-requires:
-    GD::Graph:  0
-    perl:       5.006001
-resources:
-    repository:  http://github.com/jettero/gd--graph--ohlc/
-no_index:
-    directory:
-        - t
-        - inc
-generated_by:       ExtUtils::MakeMaker version 6.54
-meta-spec:
-    url:      http://module-build.sourceforge.net/META-spec-v1.4.html
-    version:  1.4
+  ExtUtils::MakeMaker: 0
+configure_requires:
+  ExtUtils::MakeMaker: 0
+dynamic_config: 1
+generated_by: 'ExtUtils::MakeMaker version 6.59, CPAN::Meta::Converter version 2.112150'
 keywords:
-    - graph
-    - open
-    - close
+  - graph
+  - open
+  - close
+license: open_source
+meta-spec:
+  url: http://module-build.sourceforge.net/META-spec-v1.4.html
+  version: 1.4
+name: GD-Graph-ohlc
+no_index:
+  directory:
+    - t
+    - inc
+requires:
+  GD::Graph: 0
+  perl: 5.006001
+resources:
+  repository: http://github.com/jettero/gd--graph--ohlc/
+version: 0.9606
